[tool.poetry]
name = "takeout-music-import"
version = "0.1.0"
description = "Python client for uploading a music library downloaded from google takeout to the Deezer streaming service"
authors = ["Øyvind Almelid"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
sanction = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
